Make windows authorized

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,6 @@ fleet-gitops:
         npm install -g fleetctl
       fi
     - fleetctl config set --address $FLEET_URL --token $FLEET_API_TOKEN
+    - name: Make script executable
+      run: chmod +x ./gitops.sh
     - ./gitops.sh
