--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Checkout GitOps repository
         uses: actions/checkout@v4
 
+        -name: Exec
+         run: |
+          chmod +x ./.gitops.sh
+
       - name: Apply latest configuration to Fleet
         uses: ./.github/gitops-action
         with:
