--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Exec
         run: |
-          chmod +x ./.gitops.sh
+          chmod +x ./gitops.sh
 
       - name: Apply latest configuration to Fleet
         uses: ./.github/gitops-action
