--- a/default.yml
+++ b/default.yml
@@ -11,9 +11,18 @@ agent_options:
   path: ./lib/agent-options.yml
 controls:
 org_settings:
+  host_expiry_settings: 
+    host_expiry_enabld: false
+    host_expiry_window: 30
+  fleet_desktop:
+    transparency_url: https://catoftheday.com
   server_settings:
     server_url: $FLEET_URL
   org_info:
-    org_name: Fleet
+    org_name: Feet
+    webhook_settings: 
+      activities_webhook:
+        enable_activities_webhook: true
+        destination_url: https://example.com
   secrets:
     - secret: "$FLEET_GLOBAL_ENROLL_SECRET"
