--- a/teams/Engineering.yml
+++ b/teams/Engineering.yml
@@ -17,9 +17,14 @@ queries:
 agent_options:
   path: ../lib/agent-options.yml
 controls:
+  macos_settings: 
+    custom_settings:
+      - path: ../lib/passcode-settings-ddm.json
+      - path: ../lib/disable-bluetooth-file-sharing.mobileconfig
   scripts:
     - path: ../lib/remove-zoom-artifacts.script.sh
     - path: ../lib/set-timezone.script.sh
+    - path: ../lib/set-wallpaper.ps1
 team_settings:
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
