--- a/teams/Engineering.yml
+++ b/teams/Engineering.yml
@@ -28,7 +28,7 @@ controls:
 team_settings:
   webhook_settings:
     failing_policies_webhook:
-      enable_failing_policies: true
+      enable_failing_policies_webhook: true
       destination_url: https://example.org/webhook_handler
       host_batch_size: 0
       policy_ids:
