--- a/teams/Engineering.yml
+++ b/teams/Engineering.yml
@@ -35,3 +35,5 @@ team_settings:
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
 software:
+  packages: 
+    - path: ../lib/cloudflare-warp.yml
